--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,13 @@
-flask==2.3.3
-flask-cors==4.0.0
-werkzeug==2.3.7
-pyjwt==2.8.0
-python-dotenv==1.0.0
+fastapi==0.109.1
+uvicorn==0.27.0
+python-multipart==0.0.6
+numpy==1.26.4
+opencv-python==4.9.0.80
+supervision==0.19.0
+roboflow==1.1.23
+python-jose==3.3.0
+passlib==1.7.4
+python-dateutil==2.9.0.post0
+sqlite3==2.6.0  # Typically included in Python standard library
+python-multipart==0.0.6
+pydantic==2.6.3
